<resources>
    <string name="app_name">RocketApp</string>
    <string name="rockets">Rockets</string>
    <string name="launch">Launch</string>
    <string name="detail">Detail</string>
    <string name="overview">Overview</string>
    <string name="parameters">Parameters</string>
    <string name="height">Height</string>
    <string name="m">%1$d m</string>
    <string name="t">%1$d t</string>
    <string name="loading">Loading</string>
    <string name="first_stage">First Stage</string>
    <string name="second_stage">Second Stage</string>
    <string name="reusable">reusable</string>
    <string name="not_reusable">not reusable</string>
    <string name="engines">%1$d engines</string>
    <string name="tons_of_fuel">%1$d tons of fuel</string>
    <string name="seconds_burn_time">%1$d second burn time</string>
    <string name="photos">Photos</string>
    <string name="launch_rocket_info">Move your phone up to launch the rocket</string>
    <string name="launch_successful">Launch successful</string>
    <string name="mass">Mass</string>
    <string name="diameter">Diameter</string>

</resources>