<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@id/rocket_list">

    <fragment
        android:id="@+id/rocket_list"
        android:label="@string/rockets"
        android:name="com.example.rocketapp.compose.rocket.list.RocketListFragment"
        >
        <action
            android:id="@+id/action_rocket_list_to_rocket_detail"
            app:destination="@id/rocket_detail" />
    </fragment>

    <fragment
        android:id="@+id/rocket_detail"
        android:label="@string/detail"
        android:name="com.example.rocketapp.compose.rocket.detail.RocketDetailFragment" >
        <action
            android:id="@+id/action_rocket_detail_to_rocket_launch"
            app:destination="@id/rocket_launch" />
    </fragment>

    <fragment
        android:id="@+id/rocket_launch"
        android:label="@string/launch"
        android:name="com.example.rocketapp.compose.rocket.launch.RocketLaunchFragment"/>

</navigation>